<resources>
    <string name="app_name">FirebaseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="years">years</string>
    <string name="age_description">Age range preference allows us to suggest matches accordingly. Some matches may fall outside the specified range</string>
    <string name="whitelist_popup_text">Enable notifications from GoGaga</string>

    <string name="InterestedIn">Interested In</string>
    <string name="Men">Men</string>
    <string name="select_language_preference">Please select your language of choice. The language changes will take place once you go to the home screen.</string>
    <string name="whitelist_description">Never miss an update by whitelisting our app from battery optimisation</string>

    <string name="hide_profile_description">Here to only help friends? Just hide your profile and be a match-maker</string>

    <string name="Women">Women</string>
    <string name="matchmaker_label">Hide My Profile</string>

    <string name="alert_description">We strongly recommend to keep the notifications ON. You don\'t want to miss a chat notification from your match</string>
    <string name="matchMakerMode">Matchmaker-Only Mode</string>

    <string name="gender_description">Pick your gender preference</string>
    <string name="Alerts">Alerts</string>
    <string name="Sound">Sound</string>
    <string name="select_language">Select Language</string>
    <string name="language">Language</string>
    <string name="go">Go</string>
    <string name="my_preferences">Preferences</string>
    <string name="app_preferences">App preferences</string>
    <string name="match_preferences">Match preferences</string>

</resources>
