<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/agegenderPreferences"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="#fff"
        android:padding="12dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.bozapro.circularsliderrange.CircularSliderRange
                android:id="@+id/circularBar"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_centerInParent="true"
                android:padding="20dp"
                android:rotation="90"
                app:arc_color="#ff5c8d"
                app:arc_dash_size="32dp"
                app:border_color="#efefef"
                app:border_thickness="32dp"
                app:end_angle="330"
                app:end_thumb_image="@drawable/thumb1"
                app:start_angle="30"
                app:start_thumb_color="#30aeff"
                app:start_thumb_image="@drawable/thumb2"
                app:start_thumb_size="32dp"
                app:thumb_size="32dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="32dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/agepic"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_woman_2" />

                <TextView
                    android:id="@+id/yeartext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/years"
                    android:textAlignment="center"
                    android:textColor="#696969"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/age_description"
        android:textSize="12sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#fff"
        android:padding="12dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/InterestedIn"
                android:textAlignment="center"
                android:textColor="#696969"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ToggleButton
                        android:id="@+id/button_man"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/toggle_man"
                        android:checked="false"
                        android:text=""
                        android:textOff=""
                        android:textOn="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Men"
                        android:textColor="#03a9f4"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ToggleButton
                        android:id="@+id/button_woman"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/toggle_woman"
                        android:checked="true"
                        android:text=""
                        android:textOff=""
                        android:textOn="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Women"
                        android:textColor="#ec407a"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/gender_description"
        android:textSize="12sp" />
</LinearLayout>
